--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MVP</string>
+    <string name="counter1">Счетчик 1</string>
+    <string name="counter2">Счетчик 2</string>
+    <string name="counter3">Счетчик 3</string>
 </resources>
