--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="counter1">Счетчик 1</string>
     <string name="counter2">Счетчик 2</string>
     <string name="counter3">Счетчик 3</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
